--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@
     <br></br>
 
     <div id=newnes>
-        <img src="./images/newnes.jpg">
         <h2>Newnes</h2>
         <h6>posted: 02/09/2019</h6>
         <p>Newnes is a plateau region west of sydney over the Blue Mountains, it takes roughly around 3hrs from Sydney Newns is a fairly large area in terms of places you can go. It offers a wide range of 4WD tracks and Trail bike tracks also making a quite
@@ -60,6 +59,7 @@
             away.
 
         </p>
+        <img src="./images/newnes.jpg">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d76082.43586093989!2d150.2579571213742!3d-33.21530775004681!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b0d952280fe968f%3A0xa31af7c321c0acb3!2sNewnes%20Campground!5e1!3m2!1sen!2sau!4v1636366878045!5m2!1sen!2sau"
             width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </div>
@@ -84,11 +84,12 @@
     <div id=stockton>
         <h2>Stockton Beach</h2>
         <h6>posted: 5/2/2020</h6>
-        <img src="./images/stockton.jpg">
         <p>Stockton Beach is a little over 2 Hrs north of Sydney. At this beach you are allowed to camp down on the southern end of the beach which has been designated for people to camp by their cars. At this beach you can spend your day driving up and
             down the sand dunes but be careful as it can be easy to get stuck so best take someone else along with you so you are able to get back out. Another activity you can enjoy is fishing from the beach if that's something you would like to do.
             If you drive further up the beach you can find an old shipwreck the MV sygna that ran aground on the beach and hasn't moved since. This beach can be a great place to go if you want to get away and have a change of pace instead of camping in
-            the bush Why not close to the water? Having the sound of crashing waves as you lay down in your tent is a great way to get off to sleep.</p>
+            the bush Why not close to the water? Having the sound of crashing waves as you lay down in your tent is a great way to get off to sleep.
+        </p>
+        <img src="./images/stockton.jpg">
 
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d18025.450203683355!2d151.84217509568288!3d-32.86080913439561!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b7382aaa61ece5b%3A0xcbc2b9b53157de97!2sStockton%20Beach!5e1!3m2!1sen!2sau!4v1636368098398!5m2!1sen!2sau"
             width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
